Fix overflow issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,6 @@
 #timeline {
 	margin-left:auto;
 	margin-right:auto;
-	padding-bottom:100px;
 }
 
 #timeline tr {
@@ -72,8 +71,8 @@ tr:first-child td{
 /* COMMON*/
 
 .section {
-	margin-top: 100px;
-	margin-bottom: 100px;
+	padding-top: 100px;
+	padding-bottom: 100px;
 }
 
 .sectionContent {
@@ -81,8 +80,8 @@ tr:first-child td{
 	max-width: 1000px;
 	margin-right:auto;
 	margin-left: auto;
-	margin-top: 50px;
-	margin-bottom: 50px;
+	text-align: justify;
+	letter-spacing: 1px;
 
 }
 
@@ -115,8 +114,8 @@ tr:first-child td{
 }
 
 h2 {
-	padding-top: 50px;
-	padding-bottom: 50px;
+	margin:0;
+	padding-bottom: 70px;
 	text-align: center;
 	font-weight: normal;
 	font-size: 40px;
@@ -155,7 +154,7 @@ h2 {
 }
 
 .slidein-left {
-	position:relative;
+	position:absolute;
 	left: -100%;
 }
 
@@ -166,7 +165,7 @@ h2 {
 }
 
 .slidein-right {
-	position:relative;
+	position:absolute;
 	left: 100%;
 }
 
@@ -184,4 +183,5 @@ h2 {
 body {
 	margin:0;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	overflow-x: hidden;
 }
